# PaddleScienceKits

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
PaddleScienceKits/: __init__.py
PaddleScienceKits/ClassicalML/: BayesianLinearVI.py  BayesianRidge.py  GMM.py  GMMHMM.py  GaussianHMM.py  GaussianProcess.py  ICA.py  IsingModel.py  KMeans.py  KNN.py  KalmanFilter.py  KernelRidge.py  LDA.py  LinearChainCRF.py  NMF.py  NaiveBayes.py  PCA.py  ProbabilisticPCAMixture.py  RBM.py  SVM.py  SoftDecisionTree.py  SparseCoding.py  SparseGP.py  SpectralClustering.py  __init__.py  tICA.py  tSNE.py  utils.py
PaddleScienceKits/SignalProcessing/: MelSpectrogram.py  STFT.py  WaveletFilterBank.py  __init__.py
PaddleScienceKits/TimeSeries/: AR.py  ARMA.py  Autoregressive.py  FIR.py  __init__.py  utils.py
examples/: classicalml_gmm_classifier.py  classicalml_kmeans_classifier.py  classicalml_soft_tree_moons.py  gmmhmm_and_ppca_demo.py  gp_and_hmm_demo.py  lds_crf_tsne_demo.py  signalproc_mel_classifier.py  sparse_coding_and_vi_demo.py  sparse_gp_spectral_mrf_demo.py  tica_and_nmf_demo.py  timeseries_ar.py
tests/: test_classicalml.py  test_classicalml2.py  test_classicalml3.py  test_gmmhmm_and_ppca.py  test_gp_and_hmm.py  test_lds_crf_tsne.py  test_signalproc_and_extras.py  test_sparse_and_vi.py  test_sparse_gp_spectral_mrf.py  test_tica_and_nmf.py  test_timeseries.py
